hphp/hack/test/typecheck/new_inference/eager_solve/lambda2.php.like_types.exp
File "lambda2.php", line 33, characters 33-40:
Invalid argument (Typing[4323])
File "lambda2.php", line 8, characters 40-41:
Some type constraint(s) are violated here
File "lambda2.php", line 8, characters 40-41:
Ta is a constrained type parameter
File "lambda2.php", line 16, characters 5-19:
Expected Traversable<[unresolved]>
File "lambda2.php", line 8, characters 40-41:
But got dynamic
